# rk4-sparse-cpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build.sh  build_openblas_suitesparse.sh  build_suitesparse.sh  change_log.md  pyproject.toml  requirements.txt  setup.py  setup_simple.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  release.yml
build-openblas-suitesparse/: .ninja_deps  .ninja_log  build.ninja
build-openblas-suitesparse/python/rk4_sparse/: __init__.py
build-suitesparse/: .ninja_deps  .ninja_log  build.ninja
cpp/: __init__.py  rk4_sparse_cpp.py
data/results/: profile_results.md
docs/: julia_killer_strategy.md
docs/development/: julia_performance_gap_analysis_medium_scale.md
docs/reference_julia/: multilevel_benchmark_results.md
examples/: CMakeLists.txt  benchmark_comparison.py  benchmark_ho.py  benchmark_rk4.py  comprehensive_benchmark_analysis.md  example_rk4.py  final_benchmark_analysis.md  harmonic_oscillator.py  julia_killer_benchmark.py  julia_killer_simd.cpp  julia_killer_test.py  julia_style_benchmark.py  large_scale_benchmark.py  medium_scale_benchmark.py  multi_size_benchmark.py  multilevel_benchmark.cpp  multilevel_benchmark_comparison.md  performance_report.md  profile_common.py  profile_cpp.py  profile_python.py  profile_rk4_sparse.py  simple_benchmark.py  two_level_excitation.py
examples/python/: benchmark_all_implementations.py  benchmark_cached_implementation.py  benchmark_comparison.py  benchmark_selectable_implementations.py  benchmark_suitesparse_improvements.py  example_rk4.py  harmonic_oscillator.py  profile_common.py  profile_python.py  profile_rk4_sparse.py  test_blas_optimization.py  trajectory_comparison.py  two_level_excitation.py
include/: excitation_rk4_sparse.hpp  simd_complex_ops.hpp
include/excitation_rk4_sparse/: core.hpp  suitesparse.hpp
python/: __init__.py
python/excitation_rk4_sparse/: __init__.py
python/rk4_sparse/: __init__.py  __init__.py.in  api.py  fast.py  rk4_py.py  rk4_sparse_cpp.py  utils.py
src/: bindings.cpp  excitation_rk4_sparse.cpp
src/bindings/: python_bindings.cpp
src/core/: excitation_rk4_sparse.cpp  excitation_rk4_suitesparse.cpp  excitation_rk4_suitesparse_fast.cpp  excitation_rk4_suitesparse_optimized.cpp  julia_killer_rk4.cpp
tests/: README.md  __init__.py
tests/cpp/: CMakeLists.txt  __init__.py  test_sparse_matrix_operations.cpp
tests/integration/: __init__.py  test_implementation_comparison.py  test_segmentation_fault_fix.py  test_suitesparse_integration.py
tests/python/: __init__.py  test_blas_sparse_multiply.py  test_rk4.py  test_rk4_basic.py  test_rk4_sparse_eigen.py  test_rk4_sparse_suitesparse.py  test_utils.py
tools/: build.sh
