[build-system]
requires = [
    "setuptools>=64",
    "setuptools_scm[toml]>=7.1",      # ← ★ 追加
    "scikit-build-core>=0.8",
    "pybind11>=2.6.0",
    "numpy>=1.20.0"
]
build-backend = "scikit_build_core.build"

# ---------------------------------------------------------------------------
# 1. プロジェクトメタデータ
#    version は Git タグから動的取得
# ---------------------------------------------------------------------------
[project]
name = "rk4-sparse-cpp"
dynamic = ["version"]                # ← ★ version を動的に
description = "High-performance sparse matrix RK4 solver for quantum excitation dynamics"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Hiroki Tsusaka", email = "tsusaka4research@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
]
keywords = ["quantum", "dynamics", "rk4", "sparse", "physics", "simulation"]
requires-python = ">=3.8"
dependencies = [
    "pybind11>=2.6.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.900",
    "pre-commit>=2.15",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=0.15",
]
benchmark = [
    "memory-profiler>=0.58",
    "line-profiler>=3.0",
    "jupyter>=1.0",
    "seaborn>=0.11",
]

[project.urls]
Homepage = "https://github.com/1160-hrk/rk4-sparse-cpp"
Documentation = "https://github.com/1160-hrk/rk4-sparse-cpp/tree/main/docs"
Repository = "https://github.com/1160-hrk/rk4-sparse-cpp"
Issues = "https://github.com/1160-hrk/rk4-sparse-cpp/issues"

# ---------------------------------------------------------------------------
# 2. setuptools-scm 設定： Git タグから vX.Y.Z を抽出
#    （好みに応じて version_scheme 等を調整）
# ---------------------------------------------------------------------------
[tool.setuptools_scm]
# 例: v1.2.3 → 1.2.3
tag_regex = "^v(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+)$"
version_scheme = "post-release"
local_scheme = "no-local-version"

# ---------------------------------------------------------------------------
# 3. scikit-build-core: wheel 作成時に CMake へバージョンを伝播
# ---------------------------------------------------------------------------
[tool.scikit-build]
wheel.packages = ["python/rk4_sparse"]
cmake.version = ">=3.15"

# CMake に -DPROJECT_VERSION=<動的バージョン> を渡す
[tool.scikit-build.cmake.define]
PROJECT_VERSION = "{version}"

# ---------------------------------------------------------------------------
# 4. setuptools パッケージ検出 / テスト / フォーマット設定は変更なし
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["python"]
include = ["rk4_sparse*"]

[tool.setuptools.package-data]
rk4_sparse_cpp = ["*.so", "*.pyd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=excitation_rk4_sparse",
    "--cov-report=html",
    "--cov-report=term-missing",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\\.pyi?$'
extend-exclude = '''
/(
  \\.eggs
  | \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | build
  | dist
  | third_party
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "matplotlib.*",
    "numpy.*",
]
ignore_missing_imports = true
